--- a/meteor-app/client/main.html
+++ b/meteor-app/client/main.html
@@ -1,3 +1,4 @@
 <head>
-  <title>Microscope</title>
+  <title>Green Square</title>
+    <link rel="icon" type="image/png" href="\siteAssets\favicon-32x32.png" sizes="32x32" />
 </head>
